# radar

./: .env  .env.example  .gitignore  ROADMAP.md  acm_signal.txt  bcf_dump.html  check_db.py  check_gas.py  check_signature.py  drop_tables.py  dump_bcf.py  dynamic_targets.txt  enable_vector.py  fetch_dynamic.py  fix_public_schema.py  flock_scrape.txt  interests_and_sigint_topics.csv  list_models.py  main.py  map_dump.html  migrate_db.py  optimize_test_script.py  pipe_test.txt  plan_v0.14.0.md  pyproject.toml  radar_daily_sweep.sh  radar_export.json  radar_graph.html  refactor_ingest.py  refactor_main.py  scrape_kiwisdr_test.py  scrape_websdr_test.py  sweep.pid  sweep_targets.txt  test_bcf.py  test_bcf_eval.py  test_ddgs.py  test_deep_research.py  test_direct.py  test_dr.py  (+15 more)
reports/: cloud_hpc_architecture_briefing.md
src/radar/: config.py  main.py  mqtt_client.py
src/radar/core/: ingest.py  models.py
src/radar/db/: __init__.py  engine.py  init.py  models.py
src/radar/tools/: radar_embed.c  radar_extract.c  radar_fetch.c  radar_search  radar_search.c  radar_summarize.c
src/radar/ui/: dashboard.py  visualizer.py
tests/: test_ingest.py  test_text_ingest.py
