[project]
name = "radar"
version = "0.24.0"
description = "Personal Industry Intelligence CLI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "sqlmodel>=0.0.14",
    "pydantic-settings>=2.0.0",
    "pgvector>=0.2.0",
    "asyncpg>=0.29.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "cloud-sql-python-connector[asyncpg]>=1.20.0",
    "tenacity>=9.1.4",
    "duckduckgo-search>=8.1.1",
    "ddgs>=9.11.3",
    "playwright>=1.58.0",
    "pytesseract>=0.3.13",
    "pillow>=12.1.1",
    "bm25s>=0.3.2",
    "faster-whisper>=1.2.1",
    "pydub>=0.25.1",
    "scikit-learn>=1.8.0",
    "numpy>=2.4.1",
    "textual>=8.1.1",
    "folium>=0.20.0",
    "fastapi>=0.135.1",
    "uvicorn>=0.41.0",
    "sentence-transformers>=5.2.3",
    "trafilatura>=2.0.0",
]

[project.scripts]
radar = "radar.main:app"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
]

[tool.mypy]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pgvector.*"
ignore_missing_imports = true
